--- a/frontend/src/Style/Button.css
+++ b/frontend/src/Style/Button.css
@@ -4,9 +4,10 @@
 
 button {
   color: var(--blue);
-  height: 65px;
-  width: 25%;
-  font-size: 150%;
+  height: 73px;
+  width: 30%;
+  font-size: 175%;
+  font-weight: 500;
   border: 2.5px solid var(--blue);
   border-radius: 4px;
   background-color: white;
