--- a/frontend/src/Style/Button.css
+++ b/frontend/src/Style/Button.css
@@ -10,7 +10,7 @@ button {
   font-weight: 500;
   border: 2.5px solid var(--blue);
   border-radius: 4px;
-  background-color: white;
+  background-color: #D1E8FF;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s; /* Smooth transition for hover effect */
 }
 
