--- a/frontend/src/Style/App.css
+++ b/frontend/src/Style/App.css
@@ -12,5 +12,22 @@ h2 {
 }
 
 #start {
-  margin-top: 5%;
+  margin-top: 4.25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+span {
+  color: #FFC000;
+  font-style: italic;
+  font-size: 130%;
+}
+
+#start-decoration {
+  border: 5px solid #FFC000;
+  border-radius: 1% / 100%;
+  width: 70%;
+  position: absolute;
+  z-index: -1;
 }
