--- a/frontend/src/Style/Button.css
+++ b/frontend/src/Style/Button.css
@@ -9,7 +9,7 @@ button {
   font-weight: 500;
   border: 2.75px solid #0047AB;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgb(248, 248, 248);
   transition: background-color 0.3s, color 0.3s, border-color 0.3s; /* Smooth transition for hover effect */
 }
 
