format centre stuff in 2nd page

--- a/frontend/src/Style/AudioIcon.css
+++ b/frontend/src/Style/AudioIcon.css
@@ -1,6 +1,6 @@
 #icon {
     display: flex;
     align-items: center;
-    justify-content: center; /* Center the icon horizontally and vertically */
+    justify-content: center; 
     margin: 40px auto;
 }
