--- a/frontend/src/Style/Button.css
+++ b/frontend/src/Style/Button.css
@@ -1,13 +1,14 @@
 :root {
-  --blue: #0047AB;
+  --blue: #002D62;
 }
+
 button {
-  color: #0047AB;
+  color: #002D62;
   height: 73px;
-  width: 27%;
+  width: 30%;
   font-size: 175%;
   font-weight: 500;
-  border: 2.75px solid #0047AB;
+  border: 2.5px solid #002D62;
   border-radius: 4px;
   background-color: rgb(248, 248, 248);
   transition: background-color 0.3s, color 0.3s, border-color 0.3s; /* Smooth transition for hover effect */
@@ -27,5 +28,5 @@ button:hover {
 }
 
 .level-clicked {
-  background-color: #ffc516;
+  background-color: #FFC516;
 }
